--- a/GameEngineCompare/index.html
+++ b/GameEngineCompare/index.html
@@ -31,6 +31,11 @@
         <td><a href="impactJS/impact/sprites.html" target="_blank">click me</a></td>
         <td><a href="impactJS/impact/animations.html" target="_blank">click me</a></td>
     </tr>
+    <tr>
+        <td>phaser</td>
+        <td><a href="phaser/sprites.html" target="_blank">click me</a></td>
+        <td><a href="phaser/animations.html" target="_blank">click me</a></td>
+    </tr>
     </tbody>
 </table>
 
