--- a/package/jsbuilder/index.html
+++ b/package/jsbuilder/index.html
@@ -159,6 +159,16 @@
                 <span>Cocos2d-JS Download Builder</span>
             </div>
         </div>
+
+        <div class="title">
+            <h1>Download builder</h1>
+            <div>Quick downloads:
+                <a href="quick/cocos2d-html5-v3.0-alpha2.js" target="_blank">All</a>
+                |
+                <a href="quick/cocos2d-html5-v3.0-alpha2-mini.js" target="_blank">mini-core</a>
+            </div>
+        </div>
+
         <div class="version">
             <div class="current">
                 <span>CurrentVersion</span>
