--- a/package/jsbuilder/index.html
+++ b/package/jsbuilder/index.html
@@ -162,10 +162,10 @@
 
         <div class="title">
             <h1>Download builder</h1>
-            <div>Quick downloads:
-                <a href="quick/cocos2d-html5-v3.0-alpha2.js" target="_blank">All</a>
-                |
-                <a href="quick/cocos2d-html5-v3.0-alpha2-mini.js" target="_blank">mini-core</a>
+            <div>
+                With this <b>Cocos2d-JS</b> download builder, you can select the desired modules and download <b>a single js file</b> to start coding your game directly. Note that it's for web development only, if you want to deploy on native platforms, please download the
+                <a href="http://www.cocos2d-x.org/download" target="_blank">full package of Cocos2d-JS</a>.
+
             </div>
         </div>
 
@@ -182,6 +182,29 @@
                     <li class="e6"><a href="?ver=V3.0-alpha2">V3.0-alpha2</a></li>
                 </ul>
             </div>
+        </div>
+
+        <div class="table">
+            <table>
+                <thead>
+                <tr>
+                    <td colspan="2">
+                        Components
+                    </td>
+                </tr>
+                </thead>
+                <tbody>
+                <tr>
+                    <td class="file">
+                        <span id="All" class="mark"></span>
+                        Toggle All
+                    </td>
+                    <td>
+                        If it's your first time experience with Cocos2d-JS, we recommand you to download all modules to have full features support.
+                    </td>
+                </tr>
+                </tbody>
+            </table>
         </div>
 
         <div class="table">
@@ -209,14 +232,14 @@
                     <tr>
                         <td>
                             <span id="Compressor" class="mark"></span>
-                            Compressor
+                            Compressed
                         </td>
                         <td>Uses Google Closure Compiler, to clean whitespace and rename internal variables to shorter values. Highead compression ratio.</td>
                     </tr>
                     <tr>
                         <td>
                             <span class="mark checked"></span>
-                            No Compression
+                            Uncompressed
                         </td>
                         <td>Uncompressed source. Recommended in testing phase.</td>
                     </tr>
@@ -227,6 +250,13 @@
 
         <div class="button">
             <a onclick="return Load(this);" href="" class="download" target="_blank"></a>
+        </div>
+
+        <div class="link">
+            <a href="http://www.cocos2d-x.org/docs/manual/framework/html5/en" target="_blank">Cocos2d-JS documents</a>
+            <a href="http://cocos2d-x.org/wiki/Reference" target="_blank">Cocos2d-JS API reference</a>
+            <a href="http://www.cocos2d-x.org/forums/19" target="_blank">Cocos2d-JS forum</a>
+            <a href="https://github.com/cocos2d/cocos2d-js" target="_blank">Cocos2d-JS github repo</a>
         </div>
     </div>
 
