--- a/homePage/index.html
+++ b/homePage/index.html
@@ -10,12 +10,14 @@
         width:100%;
         height:100%;
     }
-    .canvas{
+    .canvas canvas{
         width:100% !important;
         height:100% !important;
     }
 </style>
-<canvas id="gameCanvas" width="980" height="500"></canvas>
+<div class="canvas">
+    <canvas id="gameCanvas" width="980" height="500"></canvas>
+</div>
 
 <script src="cocos2d-html5-v3.0-alpha2-core-min.js"></script>
 <script src="onStart.js"></script>
