--- a/GameEngineCompare/index.html
+++ b/GameEngineCompare/index.html
@@ -35,16 +35,16 @@
     <tr>
         <td>impact</td>
         <td><a href="impactJS/impact/sprites.html" target="_blank">click me</a></td>
-        <td><a href="" target="">...</a></td>
+        <td><a>no support</a></td>
         <td><a href="impactJS/impact/animations.html" target="_blank">click me</a></td>
-        <td><a href="" target="">...</a></td>
+        <td><a>no support</a></td>
     </tr>
     <tr>
         <td>phaser</td>
         <td><a href="phaser/sprites.html" target="_blank">click me</a></td>
-        <td><a href="" target="">...</a></td>
+        <td><a href="phaser/sprites.html?renderer=WebGL" target="_blank">click me</a></td>
         <td><a href="phaser/animations.html" target="_blank">click me</a></td>
-        <td><a href="" target="">...</a></td>
+        <td><a href="phaser/animations.html?renderer=WebGL" target="_blank">click me</a></td>
     </tr>
     </tbody>
 </table>
