--- a/mario/index.html
+++ b/mario/index.html
@@ -8,7 +8,8 @@
 
 <canvas id="gameCanvas" width="980" height="500"></canvas>
 
-<script src="cocos2d-html5-v3.0-alpha2-core.js"></script>
+<!--<script cocos src="src/cocos2d-html5-v3.0-alpha2-core.js"></script>-->
+<script src="../GameEngineCompare/CCBoot.js"></script>
 <script src="start.js"></script>
 </body>
 </html>
