--- a/flappy/index.html
+++ b/flappy/index.html
@@ -8,7 +8,6 @@
 <div style="display:inline-block;width:auto; margin: 0 auto; background: black; position:relative; border:5px solid black; border-radius: 10px; box-shadow: 0 5px 50px #333">
     <canvas id="gameCanvas" width="400" height="600"></canvas>
 </div>
-<script src="http://localhost:3002/package/download_.js?file=core"></script>
-<script src="main2.js"></script>
+<script src="cocos2d-html5-v3.0-alpha-min.js"></script>
 </body>
 </html>
