--- a/facebook/test.html
+++ b/facebook/test.html
@@ -23,26 +23,39 @@
                                 console.log("login callback, status: " + status);
                             });
                             */
-                            var pluginManager = plugin.PluginManager.getInstance();
-                            var ufb = pluginManager.loadPlugin("UserFacebook");
-                            ufb.login(function(status){
-                                console.log("login callback, status: " + status);
-                            });
-                            ufb.callFuncWithParam('api', "/472437549567003/scores", function(res){
-                                console.log(res);
+//                            var pluginManager = plugin.PluginManager.getInstance();
+//                            var ufb = pluginManager.loadPlugin("UserFacebook");
+                            plugin.agentManager.login(function(type, msg){
+                                console.log("login callback, status: %s", type);
+                                console.log("login callback, msg: %s", msg)
                             });
                         }
                     },{
                         itemTitle: "logout",
                         test: function(){
-                            Plugin.logout(function(status){
-                                console.log("logout callback, status: " + status);
+                            var pluginManager = plugin.PluginManager.getInstance();
+                            var ufb = pluginManager.loadPlugin("UserFacebook");
+                            ufb.logout(function(type, msg){
+                                console.log("logout callback, status: %s", type);
+                                console.log("logout callback, msg: %s", msg)
                             });
+                        }
+                    },{
+                        itemTitle: "getUid",
+                        test: function(){
+                            var uid = plugin.agentManager.getUserId();
+                            cc.log(uid);
+                        }
+                    },{
+                        itemTitle: "getToken",
+                        test: function(){
+                            var token = plugin.agentManager.getToken();
+                            cc.log(token);
                         }
                     },{
                         itemTitle: "isLogin",
                         test: function(){
-                            var o = Plugin.isLogined(function(status){
+                            var o = plugin.agentManager.isLogined(function(status){
                                 if(status === 0){
                                     console.log("callback - login");
                                 }else{
@@ -52,7 +65,7 @@
                             console.log("sync - login: " + o);
                         }
                     },{
-                        itemTitle: "share web page",
+                        itemTitle: "onShareLink",
                         test: function(){
                             Plugin.share({
                                 link: "http://code.itharbors.com"
@@ -65,18 +78,29 @@
                             });
                         }
                     },{
-                        itemTitle: "submitScore",
+                        itemTitle: "onShareOG",
                         test: function(){
-                            Plugin.submitScore(function(){
 
-                            });
                         }
                     },{
-                        itemTitle: "showLeaderboard",
+                        itemTitle: "onSharePhoto",
                         test: function(){
-                            Plugin.showLeaderboard(function(){
 
-                            });
+                        }
+                    },{
+                        itemTitle: "onLinkMsg",
+                        test: function(){
+
+                        }
+                    },{
+                        itemTitle: "onOGMsg",
+                        test: function(){
+
+                        }
+                    },{
+                        itemTitle: "onPhotoMsg",
+                        test: function(){
+
                         }
                     }
                 ];
@@ -103,8 +127,13 @@
                             for (var i = 0; i < s_EventMenuItem.length; ++i) {
                                 var selItem = s_EventMenuItem[i];
                                 var pItem = cc.MenuItemFont.create(selItem.itemTitle, this.menuCallback, this);
-                                pItem.x = winSize.width / 2;
-                                pItem.y = winSize.height - (i + 1) * 40;
+                                if(i<5){
+                                    pItem.x = winSize.width / 4;
+                                    pItem.y = winSize.height - 100 -  (i + 1) * 40;
+                                }else{
+                                    pItem.x = winSize.width / 4 *3;
+                                    pItem.y = winSize.height - 100 -  (i + -5) * 40;
+                                }
                                 pMenu.addChild(pItem, ITEM_TAG_BASIC + i);
                             }
                             this.addChild(pMenu);
