--- a/facebook/pay/item2.html
+++ b/facebook/pay/item2.html
@@ -4,11 +4,11 @@
               "og: http://ogp.me/ns#
     fb: http://ogp.me/ns/fb#
     product: http://ogp.me/ns/product#">
-    <meta property="og:title"               content="CURRENCY_SINGULAR_NAME" />
-    <meta property="og:plural_title"        content="CURRENCY_PLURAL_NAME" />
-    <meta property="og:image"               content="IMAGE_URL_200x200px" />
-    <meta property="og:url"                 content="URL_TO_THIS_WEBPAGE">
-    <meta property="og:description"         content="CURRENCY_DESCRIPTION" />
+    <meta property="og:title"               content="test title" />
+    <meta property="og:plural_title"        content="test plural_title" />
+    <meta property="og:image"               content="http://code.itharbors.com/images/logo.png" />
+    <meta property="og:url"                 content="http://tools.itharbors.com/facebook/pay/item2.html">
+    <meta property="og:description"         content="test description" />
     <meta property="og:type"                content="og:product" />
     <meta property="product:price:amount"   content="0.20"/>
     <meta property="product:price:currency" content="USD"/>
