--- a/GameEngineCompare/impactJS/impact/sprites.html
+++ b/GameEngineCompare/impactJS/impact/sprites.html
@@ -25,6 +25,7 @@
     <script type="text/javascript" src="lib/game/sprites.js"></script>
 </head>
 <body>
-<canvas id="canvas"></canvas>
+<div id="fps" style="color:#FFF;">000</div>
+<canvas id="canvas" width="2000" height="2000"></canvas>
 </body>
 </html>
