更新测试例

--- a/game/index.html
+++ b/game/index.html
@@ -9,10 +9,8 @@
 <canvas id="gameCanvas" width="800" height="600" style="background: #111;"></canvas>
 </body>
 </html>
+<script src="./harbors.min.js"></script>
 <script src="sea.js"></script>
-<script src="harbors.min.js"></script>
 <script>
-    seajs.use("harbors/Entrance", function(){
-        seajs.use("./src/main");
-    });
+    seajs.use("./src/main");
 </script>
