--- a/compare/phaser/index.html
+++ b/compare/phaser/index.html
@@ -2,6 +2,14 @@
 <html>
 <head>
 	<title>Phaser Game</title>
+    <meta name="viewport"
+          content="width=device-width,initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no,target-densitydpi=device-dpi"/>
+    <meta name="apple-mobile-web-app-capable" content="yes"/>
+
+    <meta name="full-screen" content="true"/>
+    <meta name="screen-orientation" content="portrait"/>
+    <meta name="x5-fullscreen" content="true"/>
+    <meta name="360-fullscreen" content="true"/>
 	<style type="text/css">
 		html,body {
 			background-color: #333;
