增加纯update测试

--- a/compare/index.html
+++ b/compare/index.html
@@ -28,6 +28,11 @@
         <td><a href="./cocos3.0/index.html" target="_blank">index.html</a></td>
     </tr>
     <tr>
+        <td>Cocos2d-html5</td>
+        <td>3.1 new renderer(without action)</td>
+        <td><a href="./cocos3.0/update.html" target="_blank">index.html</a></td>
+    </tr>
+    <tr>
         <td>egret</td>
         <td>1.0.6</td>
         <td><a href="./egret/launcher/index.html" target="_blank">index.html</a></td>
