--- a/compare/index.html
+++ b/compare/index.html
@@ -20,37 +20,44 @@
     <tr>
         <td>engine</td>
         <td>version</td>
-        <td>link</td>
+        <td>PC</td>
+        <td>Mobile</td>
     </tr>
     <tr>
         <td>Cocos2d-html5</td>
-        <td>3.1 new renderer</td>
+        <td>new renderer</td>
         <td><a href="./cocos3.0/index.html" target="_blank">index.html</a></td>
+        <td><a href="./cocos3.0/index-phone.html" target="_blank">index.html</a></td>
     </tr>
     <tr>
         <td>Cocos2d-html5</td>
-        <td>3.1 new renderer(without action)</td>
-        <td><a href="./cocos3.0/update.html" target="_blank">index.html</a></td>
+        <td>new renderer(without action)</td>
+        <td><a href="./cocos3.0/update.html" target="_blank">update.html</a></td>
+        <td><a href="./cocos3.0/update-phone.html" target="_blank">update.html</a></td>
     </tr>
     <tr>
         <td>egret</td>
         <td>1.0.6</td>
         <td><a href="./egret/launcher/index.html" target="_blank">index.html</a></td>
+        <td><a href="./egret/launcher/phone.html" target="_blank">phone.html</a></td>
     </tr>
     <tr>
         <td>impact</td>
         <td>1.23</td>
         <td><a href="./impact/index.html" target="_blank">index.html</a></td>
+        <td><a href="./impact/phone.html" target="_blank">phone.html</a></td>
     </tr>
     <tr>
         <td>phaser</td>
         <td>2.1.1</td>
         <td><a href="./phaser/index.html" target="_blank">index.html</a></td>
+        <td><a href="./phaser/phone.html" target="_blank">phone.html</a></td>
     </tr>
     <tr>
         <td>pixi</td>
         <td>1.6.0</td>
         <td><a href="./pixi/index.html" target="_blank">index.html</a></td>
+        <td><a href="./pixi/phone.html" target="_blank">phone.html</a></td>
     </tr>
 </table>
 </body>
