--- a/christmas/index.html
+++ b/christmas/index.html
@@ -18,8 +18,8 @@
             -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
         }
     </style>
-    <script src="../cocos2d-html5/CCBoot.js"></script>
-    <script src="main.js"></script>
+    
+    <script src="game.min.js"></script>
 </head>
 <body style="padding:0; margin: 0;">
 <canvas id="gameCanvas" width="800" height="450"></canvas>
