--- a/test2.html
+++ b/test2.html
@@ -46,7 +46,7 @@
 <script>
 
     wx.config({
-        debug: true, // 开启调试模式,调用的所有api的返回值会在客户端alert出来，若要查看传入的参数，可以在pc端打开，参数信息会通过log打出，仅在pc端时才会打印。
+        debug: false, // 开启调试模式,调用的所有api的返回值会在客户端alert出来，若要查看传入的参数，可以在pc端打开，参数信息会通过log打出，仅在pc端时才会打印。
         appId: 'wxf31e055f452b5c1c', // 必填，公众号的唯一标识
         timestamp: '1420862101', // 必填，生成签名的时间戳
         nonceStr: 'p89erol6cac3di', // 必填，生成签名的随机串
