--- a/test2.html
+++ b/test2.html
@@ -123,10 +123,10 @@
 <script>
     wx.config({
         debug: true,
-        appId: 'wxf8b4f85f3a794e77',
-        timestamp: 1420862101,
+        appId: 'wxed06695771179de6',
+        timestamp: 1420867397,
         nonceStr: 'acTiLX2nKa2v4OOw',
-        signature: '11378fa84cb5cdb725ebdcf4434e28d97024be7e',
+        signature: 'f4b6534cb1fdef56db088ca83f60926ef18146a9',
         jsApiList: [
             'checkJsApi',
             'onMenuShareTimeline',
