--- a/test2.html
+++ b/test2.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>微信JS-SDK Demo</title>
+    <title>1-39</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=0">
     <link rel="stylesheet" href="http://demo.open.weixin.qq.com/jssdk/css/style.css">
 </head>
@@ -126,7 +126,7 @@
         appId: 'wxed06695771179de6',
         timestamp: 1420867561571,
         nonceStr: 'acTiLX2nKa2v4OOw',
-        signature: '92b486517d309a00a0f1362a4951000946d2fb91',
+        signature: '42f91584b1b9180a3a464e9b0f3edd8de8b8f026',
         jsApiList: [
             'checkJsApi',
             'onMenuShareTimeline',
