--- a/test2.html
+++ b/test2.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>1-39</title>
+    <title>1-43</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=0">
     <link rel="stylesheet" href="http://demo.open.weixin.qq.com/jssdk/css/style.css">
 </head>
@@ -125,8 +125,8 @@
         debug: true,
         appId: 'wxed06695771179de6',
         timestamp: 1420867561571,
-        nonceStr: 'acTiLX2nKa2v4OOw',
-        signature: '42f91584b1b9180a3a464e9b0f3edd8de8b8f026',
+        nonceStr: 'VQhYOUJRz6RolHqN',
+        signature: 'ca88f92488084ca3934d551299bb2f2f8ee226a6',
         jsApiList: [
             'checkJsApi',
             'onMenuShareTimeline',
