--- a/test2.html
+++ b/test2.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>1-45</title>
+    <title>2-22</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=0">
     <link rel="stylesheet" href="http://demo.open.weixin.qq.com/jssdk/css/style.css">
 </head>
@@ -123,10 +123,10 @@
 <script>
     wx.config({
         debug: true,
-        appId: 'wxed06695771179de6',
-        timestamp: 1420867561571,
+        appId: 'wxe5a6125a5d3fb1f8',
+        timestamp: 1420870884592,
         nonceStr: 'VQhYOUJRz6RolHqN',
-        signature: 'c85fa155d05394849191d8b9ba563a5c5c1118cf',
+        signature: 'e30fd6ba0ba6de3eec9c8a6b96a86cd577cce9a5',
         jsApiList: [
             'checkJsApi',
             'onMenuShareTimeline',
